test_src/compiler_errors/vars/DuplicateVarError1.b
class DuplicateVarError1 {
    void test() {
        var i;
        var i = 0;
        println(i);
    }
}
